more changes in html and css

--- a/code/index.html
+++ b/code/index.html
@@ -9,15 +9,18 @@
   <body>
     <header class="flex-container-site-header">
       <div class="flex-item-header logo">
-        <img src="Biker_Two Color.png" alt="Logo">
+        <img src="icons8-bicycle-64.png" alt="Logo">
         <div class ="flex-item-header headline">
           <h1>Get up to speed</h1>
           <h2>Your online bike magazine</h2>
         </div>
       </div>
-      <div class="flex-item-header navbar">
-        <img class="nav-button" src="icons8-menu-24.png" alt="Navigate">
-      </div>
+      <nav>
+        <ul class="flex-item-header navbar"
+          <li><a href="#">About</a></li>
+          <li><a href="#">Community</a></li>
+          <li><a href="#">Contact</a></li>
+      </nav>
     </header>
 
     <section class="big-news-grid">
@@ -28,89 +31,89 @@
         <h1>All about Denmark</h1>
       </div>
       <div class="big-news-item text-big-news-item">
-        <p>There is no doubt that 2022 is Denmark's year. Not only did the small Scandinavian country host the first stretch of Tour de France - the Danish rider Jonas Vingegaard also won the 109th edition of the Tour de France.<br> <button>Read more</button></p>
+        <p>There is no doubt that 2022 is Denmark's year. Not only did the small Scandinavian country host the first stretch of Tour de France - the Danish rider Jonas Vingegaard won the 109th edition of Tour de France.<br> <button>Read more</button></p>
       </div>
     </section>
 
     <section class="flex-parent-other-news">
-      <div class="flex-child-news 1">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="östergötland.jpeg" alt="Fält i Östergötland. Foto: Jessika Lind">
         </div>
         <div class="flex-child-news-text">
           <h1>Discover Östergötland on two wheels</h1>
-          <p>Planning on getting out of the city? Follow the ever-golden fields and get lost in the beauty of Östergötland. <br>
-            <button>Read more</button></p>
+          <p>Planning on getting out of the city? Follow the ever-golden fields and get lost in the beauty of Östergötland.</p>
+          <button>Read more</button>
         </div>    
       </div>
-      <div class="flex-child-news 2">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-anastasia-shuraeva-8926958.jpg" alt="Biking in a forest. Photo: A Shuraeva">
         </div>
         <div class="flex-child-news-text">
           <h1>Uphill does not have to be a battle</h1>
-          <p>After a gruesome downhill accident, Leo Hartland has changed direction. Today he prefers uphill challenges. <br>
-            <button>Read more</button></p>
+          <p>After a gruesome downhill accident, Leo Hartland has changed direction. Today he prefers uphill challenges.</p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 3">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="Jess-pata-cykel.JPG" alt="Jessika and Patrick after a bike ride. Foto: Jessika Lind">
         </div>
         <div class="flex-child-news-text">
-          <h1>A fun couples activity? A <em>really</em> fun couples activity!</h1>
-          <p>Perhaps you might want to call it an age 30 crisis. Go ahead! Buying racer bikes and getting on the roads togheter was nevertheless a great idea for Jessika and Patrick. <br>
-            <button>Read more</button></p>
+          <h1>Sweat together, stay together</h1>
+          <p>Buying racer bikes and getting on the roads togheter was a great idea for Jessika and Patrick.</p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 4">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-rodnae-productions-10566475.jpg" alt="Young child on bike. Foto: RODNAE Productions">
         </div>
         <div class="flex-child-news-text">
-          <h1>Is there a <em>too young</em> when it comes to teaching your child to ride a bike?</h1>
-          <p>Not if you ask Kristina Petterson, doctor in child psycology. Find out everything about the toddler's brain and the child's relationship to the bike in this article. <br>
-            <button>Read more</button></p>
+          <h1>Get your toddler bike-ready!</h1>
+          <p>Still on vacation? No time like the present to start preparing your toddler for a bike life. </p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 5">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-lina-kivaka-1458742.jpg" alt="E-bikes in London. Foto: Lina Kivaka">
         </div>
         <div class="flex-child-news-text">
-          <h1>E-bike: friend or foe?</h1>
-          <p>From North to South, from East to West, you can see them popping up. On the one hand, the popularity of e-bikes open up the world of bikes to more people. On the other: it makes us lazy. <br>
-            <button>Read more</button></p>
+          <h1>Electric bikes: friends or foes?</h1>
+          <p>It seems you either love them or hate them. The e-bikes certainly are a hot topic of debate.</p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 6">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-tima-miroshnichenko-5061121.jpg" alt="Man with a bike. Photo:Tima Miroshnichenko">
         </div>
         <div class="flex-child-news-text">
-          <h1>Guide: everything to consider when buying new wheels</h1>
-          <p>Is it time to freshen up your wheels? In our brand new guide you will find all the tips and tricks you need to find the best wheels for your beloved bike. <br>
-            <button>Read more</button></p>
+          <h1>Guide: find your new bike second hand</h1>
+          <p>It's a story as old as time: one man's junk is another man's treasure. Get up to speed on the latest second hand-tips.</p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 7">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-pavel-danilyuk-5807578.jpg" alt="Three friends riding. Photo: Pavel Danilyuk">
         </div>
         <div class="flex-child-news-text">
-          <h1>Three is a magic number</h1>
-          <p>Up until a few years back, Robin Rådgård, had no one to ride with. This all changed last summer when he found Peter and Nori through a social media network. Today the three friends bike every Sunday. <br>
-            <button>Read more</button></p>
+          <h1>Surely, three is the magic number</h1>
+          <p>Through <em>Get up to Speed's</em> community, Robin Rådgård, 45, found his two best bike friends.</p>
+          <button>Read more</button>
         </div>   
       </div>
-      <div class="flex-child-news 8">
+      <div class="flex-child-news">
         <div class="flex-child-news-img">
           <img src="pexels-hessel-geriet-3315147.jpg" alt="Woman doing down-hill biking. Photo: Hessel Geriet">
         </div>
         <div class="flex-child-news-text">
-          <h1>"Everytime I get on the bike I need to remind myself to be brave"</h1>
-          <p>This mantra is central to Hanna Gabrielsson, since she is both afraid of heights and speed. A bit extra courage is therefore needed. <br>
-            <button>Read more</button></p>
+          <h1>"I have to remind myself to be brave"</h1>
+          <p>Hanna Gabrielsson is afraid of both heights and speed. Despite this, downhill is her passion.</p>
+          <button>Read more</button>
         </div>   
       </div>
     </section>
