flex-box in grid container

--- a/new code/index.html
+++ b/new code/index.html
@@ -44,7 +44,15 @@
   <section class="grid-parent">
     <div class="grid-item big-grid-item">*</div>
     <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
+    <div class="grid-item">
+      <div class="news">
+        <img src="css-logo.png" alt="css-logo" />
+        <h2>CSS</h2>
+        <p>
+          Cascading Style Sheets (CSS), the winner of our beauty contest! 👑
+        </p>
+      </div>
+    </div>
     <div class="grid-item">*</div>
     <div class="grid-item">*</div>
     <div class="grid-item">*</div>
@@ -53,10 +61,13 @@
     <div class="grid-item">*</div>
   </section>
 
-  <!-- <section class="grey-box">
-    <h2>Trending gossips 🔥</h2>
-    <p>Hello everybody! Welcome to these exciting news!</p>
-    <img src="129.jpg" alt="a picture of a dog" />
-  </section>
-</body> -->
+  <!-- 
+  <article class="news">
+    <img src="css-logo.png" alt="css-logo" />
+    <h2>CSS</h2>
+    <p>
+      Cascading Style Sheets (CSS) is a style sheet language used for describing
+      the presentation of a document written in a markup language
+    </p>
+  </article> -->
 </body>
