change location of logo

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
         <div class="title-container">
-            <img class="logo" src="https://cdn-icons.flaticon.com/png/512/1132/premium/1132393.png?token=exp=1656759872~hmac=cbd4f8444c95a5df18da16fc82733a65" alt="Happy News logo">
+            <img class="logo" src="logo.png" alt="Happy News logo">
             <h1 class="site-name">Happy news</h1>
         </div> 
 
@@ -310,7 +310,7 @@
     </main>
     <footer>
         <p class="disclaimer"><strong>Disclaimer!</strong> All news on this site is <strong>100% fake</strong>. Any similarities with true events are coincidental. </p>
-        <a href="https://www.flaticon.com/free-icons/good" title="good icons">Happy News logo created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/good" title="good icons">Happy News logo ("Good icons") created by Freepik - Flaticon</a> 
     </footer>
   </body>
 </html>
