changed the big-news part to a grid layout instead of flex, because if trouble with size of the image.

--- a/code/index.html
+++ b/code/index.html
@@ -8,24 +8,22 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <h1>SITE NAME</h1>
-      </div> 
-      <div class="navbar">
+      <h1>SITE NAME</h1>
         <ul>
           <li><a href="morenews.asp">more articles</a></li>
           <li><a href="contact.asp">contact</a></li>
-          <li><a href="about.asp">bout</a></li>
+          <li><a href="about.asp">about</a></li>
         </ul>
-      </div>
     </header>
 
     <section class="news-items">
       <div class="news-item big-news">
         <img src="sports.jpg" alt="">
-        <h2>BIG NEWS ITEM</h2> 
-        <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
-      </div>
+        <div class="text-box">
+          <h2>BIG NEWS ITEM</h2> 
+          <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
+        </div>
+      </div>     
 
       <div class="news-item other-news">
         <img src="airport.jpg" alt="">
