update for the bigger media queries with grid

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
         <img src="airport.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
      
       </div>
@@ -37,35 +37,35 @@
         <img src="healthcare.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="war.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet. </p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="peru.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
       </div>
       <div class="news-item other-news">
         <img src="finance.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>   
       </div>
       <div class="news-item other-news">
         <img src="airplanes.jpg" alt=""> 
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
 
       </div>
@@ -73,7 +73,7 @@
         <img src="family.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
-          <p>more info about the other news here</p>
+          <p>Lorem ipsum dolor sit amet.  Et galisum doloribus et esse esse qui voluptatibus doloremque et velit vero est dicta facilis.</p>
         </div>
       </div>
     </section>
