last changes in html and css

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
         <h1>All about Denmark</h1>
       </div>
       <div class="big-news-item text-big-news-item">
-        <p>There is no doubt that 2022 is Denmark's year. Not only did the small Scandinavian country host the first stretch of Tour de France - the Danish rider Jonas Vingegaard won the 109th edition of Tour de France.<br> <button>Read more</button></p>
+        <p>There is no doubt that 2022 is Denmark's year. Not only did the small Scandinavian country host the first stretch of Tour de France - the Danish rider Jonas Vingegaard won the entire competition.<br> <button>Read more</button></p>
       </div>
     </section>
 
