Pictures, new background clr

--- a/new code/index.html
+++ b/new code/index.html
@@ -42,32 +42,81 @@
   </header>
 
   <section class="grid-parent">
-    <div class="grid-item big-grid-item">*</div>
-    <div class="grid-item">*</div>
+    <div class="grid-item big-grid-item">
+      <img
+        src="https://images.unsplash.com/photo-1516105442523-f6e1d7888852?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTkzNzQ2NTM&ixlib=rb-1.2.1&q=80"
+        alt="juicy lemon background"
+      />
+    </div>
     <div class="grid-item">
-      <div class="news">
+      <div class="news html">
+        <img src="html-logo.png" alt="html-logo" />
+        <h2>HTML</h2>
+        <p>The structure planner we can always rely on! 📔</p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news css">
         <img src="css-logo.png" alt="css-logo" />
         <h2>CSS</h2>
+        <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news javascript">
+        <img src="javascript-logo.png" alt="javascript-logo" />
+        <h2>Javascript</h2>
         <p>
-          Cascading Style Sheets (CSS), the winner of our beauty contest! 👑
+          A real doer! The one that does not just talk around but actually makes
+          things happen.💪
         </p>
       </div>
     </div>
-    <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
-    <div class="grid-item">*</div>
+    <div class="grid-item">
+      <div class="news react">
+        <img src="react-logo.png" alt="react-logo" />
+        <h2>React</h2>
+        <p>
+          The ultimate Java-script library that makes your live smoother than an
+          aftershave.
+        </p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news c++">
+        <img src="c++-logo.png" alt="c++-logo" />
+        <h2>C++</h2>
+        <p>
+          The highest performer in class helping with resources and memory! 🧠
+        </p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news redux">
+        <img src="redux-logo.png" alt="redux-logo" />
+        <h2>Redux</h2>
+        <p>
+          The predictable state container that helps apps to behave
+          consistently. This dude and React are this 🤞 tight.
+        </p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news github">
+        <img src="github-logo.png" alt="github-logo" />
+        <h2>Github</h2>
+        <p>The best code hosting platform. There is no host like Github! 🏠</p>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="news soft-skills">
+        <img src="soft-skills-logo.png" alt="soft-skills-logo" />
+        <h2>Soft skills</h2>
+        <p>
+          The personal attribute that enhances an individual's ability to get a
+          job done (together with bf Google).
+        </p>
+      </div>
+    </div>
   </section>
-
-  <!-- 
-  <article class="news">
-    <img src="css-logo.png" alt="css-logo" />
-    <h2>CSS</h2>
-    <p>
-      Cascading Style Sheets (CSS) is a style sheet language used for describing
-      the presentation of a document written in a markup language
-    </p>
-  </article> -->
 </body>
