removed button. added a logo in the header.

--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
-      <h1>SITE NAME</h1>
+      <div class="logo-sitename">
+        <img src="logo.svg" alt="logo">
+         <h1>SITE NAME</h1>
+      </div>
         <ul>
           <li><a href="morenews.asp">more articles</a></li>
           <li><a href="contact.asp">contact</a></li>
@@ -17,19 +20,20 @@
     </header>
 
     <section class="news-items">
-      <div class="news-item big-news">
+      <a href="bignews" class="news-item big-news">
+      
         <img src="sports.jpg" alt="">
         <div class="text-box">
           <h2>BIG NEWS ITEM</h2> 
           <p>Lorem ipsum dolor sit amet. Sed consequuntur omnis est distinctio cupiditate ut soluta consequuntur ut nihil voluptate sit fuga sint rem unde reprehenderit? Ut soluta culpa ut expedita accusantium ex excepturi eveniet ad nihil maiores. </p>
-            <div class="button">
-            <a href="readmore.html"><p>read more</p></a>
-            </div>
+            <!-- <div class="button">
+            <a href="readmore.html"><p>read more</p>
+            </div> -->
         </div>
        
-      </div>     
+      </a>     
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="airport.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
@@ -37,7 +41,7 @@
         </div>
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="healthcare.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
@@ -45,7 +49,7 @@
         </div>
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="war.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
@@ -53,7 +57,7 @@
         </div>
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="peru.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
@@ -61,7 +65,7 @@
         </div>
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="finance.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
@@ -69,7 +73,7 @@
         </div>   
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="airplanes.jpg" alt=""> 
         <div class="text-box">
           <h3>other news here</h3> 
@@ -77,7 +81,7 @@
         </div>
       </a>
 
-      <a href="box" class="news-item other-news">
+      <a href="newslink" class="news-item other-news">
         <img src="family.jpg" alt="">
         <div class="text-box">
           <h3>other news here</h3> 
