--- a/new code/index.html
+++ b/new code/index.html
@@ -44,27 +44,41 @@
   <section class="grid-parent">
     <div class="grid-item big-grid-item">
       <img
+        class="juicy"
         src="https://images.unsplash.com/photo-1516105442523-f6e1d7888852?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NTkzNzQ2NTM&ixlib=rb-1.2.1&q=80"
         alt="juicy lemon background"
       />
+      <div class="main-news">
+        <h1>Welcome to the Juicy news!</h1>
+        <p>
+          This news site is just a sneak peak into the fantastic tools we will
+          master by January 2023! The knowledge will be juicy and curiosity
+          close to unstoppable. Get ready we are starting!
+        </p>
+        <button class="read-more" type="button">Read more</button>
+      </div>
     </div>
     <div class="grid-item">
       <div class="news html">
-        <img src="html-logo.png" alt="html-logo" />
+        <img class="html-logo" src="html-logo.png" alt="html-logo" />
         <h2>HTML</h2>
         <p>The structure planner we can always rely on! 📔</p>
       </div>
     </div>
     <div class="grid-item">
       <div class="news css">
-        <img src="css-logo.png" alt="css-logo" />
+        <img class="css-logo" src="css-logo.png" alt="css-logo" />
         <h2>CSS</h2>
         <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
       </div>
     </div>
     <div class="grid-item">
       <div class="news javascript">
-        <img src="javascript-logo.png" alt="javascript-logo" />
+        <img
+          class="javascript-logo"
+          src="javascript-logo.png"
+          alt="javascript-logo"
+        />
         <h2>Javascript</h2>
         <p>
           A real doer! The one that does not just talk around but actually makes
@@ -74,17 +88,17 @@
     </div>
     <div class="grid-item">
       <div class="news react">
-        <img src="react-logo.png" alt="react-logo" />
+        <img class="react-logo" src="react-logo.png" alt="react-logo" />
         <h2>React</h2>
         <p>
           The ultimate Java-script library that makes your live smoother than an
-          aftershave.
+          aftershave. 🌬️
         </p>
       </div>
     </div>
     <div class="grid-item">
       <div class="news c++">
-        <img src="c++-logo.png" alt="c++-logo" />
+        <img class="c++-logo" src="c++-logo.png" alt="c++-logo" />
         <h2>C++</h2>
         <p>
           The highest performer in class helping with resources and memory! 🧠
@@ -93,7 +107,7 @@
     </div>
     <div class="grid-item">
       <div class="news redux">
-        <img src="redux-logo.png" alt="redux-logo" />
+        <img class="redux-logo" src="redux-logo.png" alt="redux-logo" />
         <h2>Redux</h2>
         <p>
           The predictable state container that helps apps to behave
@@ -103,18 +117,24 @@
     </div>
     <div class="grid-item">
       <div class="news github">
-        <img src="github-logo.png" alt="github-logo" />
+        <img class="github-logo" src="github-logo.png" alt="github-logo" />
         <h2>Github</h2>
-        <p>The best code hosting platform. There is no host like Github! 🏠</p>
+        <p>
+          The best code hosting platform ever. There is no host like Github! 🏠
+        </p>
       </div>
     </div>
     <div class="grid-item">
       <div class="news soft-skills">
-        <img src="soft-skills-logo.png" alt="soft-skills-logo" />
+        <img
+          class="soft-skills-logo"
+          src="soft-skills-logo.png"
+          alt="soft-skills-logo"
+        />
         <h2>Soft skills</h2>
         <p>
           The personal attribute that enhances an individual's ability to get a
-          job done (together with bf Google).
+          job done (together with bf Google). ✔
         </p>
       </div>
     </div>
