Finetuned navbar & footer. Add ham icon to tablet.

--- a/code/index.html
+++ b/code/index.html
@@ -6,17 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Greece: Islands</title>
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/3cc92f3716.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!--header+nav bar-->
     <header>
-      <h1>Greece</h1>
       <nav class="nav-bar">
+        <h1>Greece</h1>
         <ul class="nav-links">
           <li class="nav-item"><a href="#featured">Featured</a></li>
           <li class="nav-item"><a href="#islands">Islands</a></li>
           <li class="nav-item"><a href="#contact">Contact</a></li>
         </ul>
+        <i class="fa-solid fa-bars"></i>
       </nav>
     </header>
     <div class="container">
@@ -72,13 +77,13 @@
         <ul class="social">
           <li>
             <a href="https://www.linkedin.com/in/juliaostedt/"
-              ><img src="assets/images/logo-linkedin.png" alt="linkedin"
-            /></a>
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li>
             <a href="https://github.com/juliaostedt"
-              ><img src="assets/images/logo-github.png" alt="github"
-            /></a>
+              ><i class="fa-brands fa-square-github"></i
+            ></a>
           </li>
         </ul>
         <p class="copyright">Copyright 2022 Julia Östedt</p>
