--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
     <section class="featured-news">
       <div class="featured1">
         <a href="./images-videos/boy-climbing2.mp4">
-          <video src="./images-videos/boy-climbing2.mp4" autoplay loop></video>
+          <video src="./images-videos/boy-climbing2.mp4" autoplay controls loop></video>
         </a>
         <article class="featured-article">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
