--- a/code/about.html
+++ b/code/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
   <title>climbing-magazine-about</title>
 </head>
 <body>
-	<div class="wrapper">
+  <div class="wrapper">
     <header class="header">
       <div class="logo-container">
         <img class="logo" src="./images-videos/logo.png" alt="logo">
@@ -25,20 +25,20 @@
         <li><a href="contact.html">Contact</a></li>            
       </ul>
     </header>
-		<section class="grid-about">
-		<div class="container-about">
-			<div class="about-title">
-				<h2>A little bit about us</h2>
-			</div>
-			<div class="about-info">
-				<div class="about-info-child">
-					<img src="./code/images-videos/about-us.jpg" alt="this is us">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
-				</div>
-			</div>
-		</div>
-		</section>
-		<footer class="footer">
+    <section class="grid-about">
+    <div class="container-about">
+      <div class="about-title">
+        <h2>A little bit about us</h2>
+      </div>
+      <div class="about-info">
+        <div class="about-info-child">
+          <img src="./images-videos/about-us.jpg" alt="this is us">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>  
+        </div>
+      </div>
+    </div>
+    </section>
+    <footer class="footer">
       <div class="grid-footer-container">
         <div class="flex-footer-container">
           <div class="flex-footer-child info1">
